# macro-data-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  check_apis.py  docker-compose.airflow.yml  pyproject.toml
.github/workflows/: ci.yml
dags/: macro_data_dag.py
infra/bq_schema/: observations.sql
src/pipeline/: config.py  loader.py  main.py  models.py
src/pipeline/fetchers/: base.py  imf.py  oecd.py
src/pipeline/transformers/: imf.py  oecd.py
tests/: test_imf_fetcher.py  test_oecd_fetcher.py  test_transformers.py
tests/fixtures/: imf_response.json  oecd_response.json
